STYLE: change size of the popup and fixing filter button alignment

--- a/app/assets/stylesheets/components/_photo_popup.scss
+++ b/app/assets/stylesheets/components/_photo_popup.scss
@@ -1,7 +1,7 @@
 @import 'avatar';
 .popup {
   position: relative;
-  width: 400px;
+  width: 200px;
   padding: 0px;
 
   .popup-image {
